Filter test complete

--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,10 @@
 
   <script src="services/users/users.js"></script>
   <script src="services/pokemon/pokemon.js"></script>
-
   <script src="components/users/users.js"></script>
+  <script src="components/profile/profile.js"></script>
+  <script src="components/missingno/missingno.js"></script>
+  <script src="filters/capitalize/capitalize.js"></script>
 
   <script src="app.js"></script>
 </head>
